--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,8 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
+# Workaround for this issue https://code.google.com/p/android/issues/detail?id=321693
+android.enableBuildCache=false
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
