--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
     flavorDimensions "appId"
 
     productFlavors {
+        all {
+            buildConfigField 'String', 'HOST', '"https://www.reddit.com/"'
+        }
+
         dev {
             dimension "appId"
             applicationId "com.strila.petproject.develop"
@@ -40,6 +44,10 @@ android {
 }
 
 dependencies {
+    def supportVersion = '26.1.0'
+    def daggerVersion = '2.11'
+    def retrofitVersion = '2.3.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -48,15 +56,19 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation "com.android.support:support-annotations:$rootProject.supportVersion"
-    implementation "com.android.support:support-v4:$rootProject.supportVersion"
-    implementation "com.android.support:recyclerview-v7:$rootProject.supportVersion"
+    implementation "com.android.support:support-annotations:$supportVersion"
+    implementation "com.android.support:support-v4:$supportVersion"
+    implementation "com.android.support:recyclerview-v7:$supportVersion"
 
-    implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
-    implementation "com.google.dagger:dagger-android:$rootProject.daggerVersion"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    implementation "com.google.dagger:dagger-android:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$daggerVersion"
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 }
